[package]
name = "tailscale"
description = "A set of application-level primitives for Tailscale."
version = "0.1.0"
authors = ["Morgan Gallant <morgan@xor.dev>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/xortechnologies/tailscale-rs"
license = "MIT"
keywords = ["tailscale", "ipn", "intranet"]
categories = ["network-programming"]

[dependencies]
pnet = "0.26.0"
ipnetwork = "0.16.0"