[package]
name = "tailscale"
description = "A set of application-level primitives for Tailscale."
version = "0.1.1"
authors = ["Morgan Gallant <morgan@xor.dev>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/xortechnologies/tailscale-rs"
license = "MIT"
keywords = ["tailscale", "ipn", "intranet"]
categories = ["network-programming"]

[dependencies]
pnet = "0.31.0"
ipnetwork = "0.20.0"
pnet_datalink = "0.31.0"
